# mandelbrot-wasm

./: Cargo.toml  README.md  index.html
src/: lib.rs
web/: index.html  mandelbrot.d.ts  mandelbrot.js  mandelbrot_bg.wasm  mandelbrot_bg.wasm.d.ts
