[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
description = "A Mandelbrot set generator written in Rust and compiled to WebAssembly."
repository = "https://github.com/3zcurdia/mandelbrot-wasm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num = "0.4.0"

